Animation and game levels

--- a/snake2.html
+++ b/snake2.html
@@ -22,12 +22,12 @@
   <title>Mini-jeu - Annif de Clément et Marie</title>
 </head>
 <body class="bg-dark">
-  <div class="container-center-md">
-    <p id="scoreLabel" class="text-secondary text-center fs-3"></p>
-    <canvas class="border border-secondary" width="1000" height="800" id="game"></canvas>
-    <p id="gift1" class="text-secondary text-center fs-2"></p>
-    <p id="gift2" class="text-secondary text-center fs-2"></p>
-  </div>
+    <div class="container-center-md">
+        <p id="scoreLabel" class="text-secondary text-center fs-3"></p>
+        <canvas class="border border-secondary" width="1000" height="800" id="game" data-mdb-animation-start="manually"></canvas>
+        <label id="score1Label" class="form-label mt-3" data-mdb-animation-start="manually"></label>
+        <label id="score2Label" class="form-label mt-3" data-mdb-animation-start="manually"></label>
+    </div>
   <script src="./script.js", type="module"></script>
 </body>
 </html>
