--- a/snake2.html
+++ b/snake2.html
@@ -23,10 +23,9 @@
 </head>
 <body class="bg-dark">
     <div class="container-center-md">
-        <p id="scoreLabel" class="text-secondary text-center fs-3"></p>
         <canvas class="border border-secondary" width="1000" height="800" id="game" data-mdb-animation-start="manually"></canvas>
-        <label id="score1Label" class="form-label mt-3" data-mdb-animation-start="manually"></label>
-        <label id="score2Label" class="form-label mt-3" data-mdb-animation-start="manually"></label>
+        <p id="score1Label" class="form-label mt-3" data-mdb-animation-start="manually"></p>
+        <p id="score2Label" class="form-label mt-3" data-mdb-animation-start="manually"></p>
     </div>
   <script src="./script.js", type="module"></script>
 </body>
