Malus & score display

--- a/snake2.html
+++ b/snake2.html
@@ -23,9 +23,11 @@
 </head>
 <body class="bg-dark">
     <div class="container-center-md">
-        <canvas class="border border-secondary" width="1000" height="800" id="game" data-mdb-animation-start="manually"></canvas>
-        <p id="score1Label" class="form-label mt-3" data-mdb-animation-start="manually"></p>
-        <p id="score2Label" class="form-label mt-3" data-mdb-animation-start="manually"></p>
+      <div class="row">
+        <p id="score1Label" class="col text-center text-white fs-2 form-label mt-3" data-mdb-animation-start="manually">Hahaha</p>
+        <p id="score2Label" class="col text-center text-white fs-2 form-label mt-3" data-mdb-animation-start="manually">Hihihi</p>
+      </div>
+      <canvas class="border border-secondary" width="1000" height="800" id="game" data-mdb-animation-start="manually"></canvas>
     </div>
   <script src="./script.js", type="module"></script>
 </body>
