Horiz vertic snakes opponents and lvls

--- a/snake.html
+++ b/snake.html
@@ -47,7 +47,7 @@
           <p id="lvlIndicator" class="text-center text-white fs-3 form-label mt-1"></p>
         </div>
         <div class="col">
-          <p class="text-center text-white fs-6 form-label mt-1">F11_for_better_experience</p>
+          <!--p class="text-center text-white fs-6 form-label mt-1">F11_for_better_experience</p-->
         </div>
       </div>
       <div class="row">
