--- a/snake.html
+++ b/snake.html
@@ -25,7 +25,7 @@
 
     #fushiaSnakeSpeed::-webkit-slider-thumb {
         /* Change background color of the thumb button */
-        background-color: rgb(255, 0, 153);
+        background-color: rgb(0, 221, 255);
     }
 
     #greenSnakeSpeed::-webkit-slider-thumb {
@@ -76,6 +76,6 @@
         </div>
       </div>
     </div>
-  <script src="./script.js", type="module"></script>
+  <script src="./script.js" type="module"></script>
 </body>
 </html>
